━━╬٨ـﮩﮩ❤️٨ـﮩﮩـ╬━❤️❥༄ᶦᶰᵈ᭄AJAD࿐

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ https://fonts.maateen.me/charukola-ultra-light/="stylesheet">
                  <ul>
                      <li><a href="#"><!-- Home --><i class="fa-solid fa-house nav-icon-h"></i></a></li>
                      <li><a href="#"><!-- About --><i class="fa-solid fa-circle-info nav-icon-i"></i></a></li>
-                     <li><a href="https://www.facebook.com/arafatazadyasin?mibextid=ZbWKwL" target="_blank"><!-- Contact --><i class="fa-brands fa-facebook nav-icon-a"></i></a></li>
+                     <li><a href="https://m.facebook.com/arafatazadyasin?eav=AfZKzyQ7fTszUHBuATTEoisOgEyqEvipxe41nVZhDUKnqJ7Ts42Ifss0d5pSjvXw3Cc&refid=46&__xts__%5B0%5D=12.Abpopc2NETsYapAZxcadj37EvHF4XkyJscqBegF2A0g1I8nBkvIIjscYDy6a-BInLh6XupV0bfJ7VBOhSPmZf_K2fL9zjetIGCZZ6D-bh1-nPTwDwWQQUhlZEVzB5_O8KWRoSjLWckuhTTDmczlujLexti9gqmo-ow0TkY6uaquca51jND6GSzxbch7gxNVA3kFJLt_hQYkqxiOjt0zFRxaELpp8ZHWq0HhY0syvsvh9RaKwrEveSyzN8zkRO5_l4YKYZ2GLXD79SUhvnp9bgzHN_EEZHlknSNFHV_thKuvnf1hJq0pg3YQhfsPE4waHuduCJ-YaoqHk3tr5iCqvGdG48RO1Q_c7sAA7zNjUQ-hqIrDQmao8QANXlZLopATiaW7W0nAwZy0yraBMLr5MZNmfI0RUGMaPrvIiQhZPK-XXeY3KlZO8cOhiP2KVKTqnizMAQ1IO81NQMtxYPhyCUpBi8Bg0VeZ7_IibYcucLOH8rG2IowbUvarCGBhn_2R63gYaMs5s8MyvRJ2gCp6KVIUtrJOppJ19eoXRdGcdsg58lz8zGFHm4jjGJH9aa7FvYws&paipv=0" target="_blank"><!-- Contact --><i class="fa-brands fa-facebook nav-icon-a"></i></a></li>
                      <div class="fixed"></div>
                  </ul>
              </nav>
