━━╬٨ـﮩﮩ♥ ٨ـﮩﮩـ╬━♥ ❥༄ᶦᶰᵈ᭄AJAD࿐

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ https://fonts.maateen.me/charukola-ultra-light/="stylesheet">
                  <div class="title"></div>
                  <div class="caption">
                      <p>- K Jeno Bolesilo amay..</p>
-                     <p>- Amader moto chekeder jonno ekhonkar somaj nosto hoye jacce...!</p>
+                     <p>- Amader moto cheleder jonno ekhonkar somaj nosto hoye jacce...!</p>
 		     <p>- Take boltesi..</p>
 		     <p>- Somaj Bodlanur dayitto Amar na..</p>
 
